--- a/Projects/SnifferRS232/ServiceSoftware/SnifferRS232.ioc
+++ b/Projects/SnifferRS232/ServiceSoftware/SnifferRS232.ioc
@@ -5,20 +5,25 @@ Mcu.Family=STM32F4
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
 Mcu.IP2=SYS
-Mcu.IP3=USART1
-Mcu.IPNb=4
+Mcu.IP3=TIM1
+Mcu.IP4=UART4
+Mcu.IPNb=5
 Mcu.Name=STM32F446R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PH0-OSC_IN
 Mcu.Pin1=PH1-OSC_OUT
-Mcu.Pin2=PA9
-Mcu.Pin3=PA10
-Mcu.Pin4=PA13
-Mcu.Pin5=PA14
-Mcu.Pin6=PA15
-Mcu.Pin7=PB3
-Mcu.Pin8=PB4
-Mcu.PinsNb=9
+Mcu.Pin10=PB3
+Mcu.Pin11=PB4
+Mcu.Pin12=VP_SYS_VS_Systick
+Mcu.Pin2=PA0-WKUP
+Mcu.Pin3=PA1
+Mcu.Pin4=PA8
+Mcu.Pin5=PA9
+Mcu.Pin6=PA10
+Mcu.Pin7=PA13
+Mcu.Pin8=PA14
+Mcu.Pin9=PA15
+Mcu.PinsNb=13
 Mcu.UserConstants=
 Mcu.UserName=STM32F446RCTx
 MxCube.Version=4.20.1
@@ -33,16 +38,19 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true
-PA10.Mode=Asynchronous
-PA10.Signal=USART1_RX
+PA0-WKUP.Mode=Asynchronous
+PA0-WKUP.Signal=UART4_TX
+PA1.Mode=Asynchronous
+PA1.Signal=UART4_RX
+PA10.Signal=S_TIM1_CH3
 PA13.Mode=JTAG_5_pins
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=JTAG_5_pins
 PA14.Signal=SYS_JTCK-SWCLK
 PA15.Mode=JTAG_5_pins
 PA15.Signal=SYS_JTDI
-PA9.Mode=Asynchronous
-PA9.Signal=USART1_TX
+PA8.Signal=S_TIM1_CH1
+PA9.Signal=S_TIM1_CH2
 PB3.Mode=JTAG_5_pins
 PB3.Signal=SYS_JTDO-SWO
 PB4.Mode=JTAG_5_pins
@@ -105,5 +113,17 @@ RCC.VCOInputFreq_Value=1666666.6666666667
 RCC.VCOOutputFreq_Value=360000000
 RCC.VCOSAIInputFreq_Value=1562500
 RCC.VCOSAIOutputFreq_Value=300000000
-USART1.IPParameters=VirtualMode
-USART1.VirtualMode=VM_ASYNC
+SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1
+SH.S_TIM1_CH1.ConfNb=1
+SH.S_TIM1_CH2.0=TIM1_CH2,PWM Generation2 CH2
+SH.S_TIM1_CH2.ConfNb=1
+SH.S_TIM1_CH3.0=TIM1_CH3,PWM Generation3 CH3
+SH.S_TIM1_CH3.ConfNb=1
+TIM1.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM1.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
+TIM1.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
+TIM1.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3
+UART4.IPParameters=VirtualMode
+UART4.VirtualMode=Asynchronous
+VP_SYS_VS_Systick.Mode=SysTick
+VP_SYS_VS_Systick.Signal=SYS_VS_Systick
